fix: Fix logo not showing after using Vite

--- a/src/style.css
+++ b/src/style.css
@@ -385,7 +385,7 @@ right: 5px;
 	width: 100%;
 	height: 100vh;
 	position: relative;
-	background: url('assets/background.jpg') no-repeat center center/cover;
+	background: url('./assets/background.jpg') no-repeat center center/cover;
 }
 
 .showcase::after {
